<resources>
    <string name="app_name">Project</string>
    <string name="ready_to_start_music_trivia">Ready to start music trivia?</string>
    <string name="next_question">Next question</string>
    <string name="show_answer">Show answer</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="plus">Correct</string>
    <string name="minus">Reduce</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="_0" translatable="false">0</string>
    <string name="add_player">Add player</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="player_count_maxed_out">Player count maxed out</string>
    <string name="players">Players:\n\n</string>
    <string name="player_name_can_t_be_empty">Player name can\'t be empty</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="please_click_the_next_question_button">Please click the \"Next question\" button</string>
    <string name="save_scores">Save scores</string>
    <string name="remove_latest">Remove latest</string>
    <string name="no_players_to_remove">No players to remove</string>
</resources>