<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#179F9F"
    tools:context=".TriviaActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="500dp"
        android:text="@string/ready_to_start_music_trivia"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="380dp"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/incrementButton2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#00AA2A"
        android:foregroundTint="#000000"
        android:onClick="changeCounterValue"
        android:text="@string/plus"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/counterEditText2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/decrementButton2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#E30202"
        android:foregroundTint="#000000"
        android:onClick="changeCounterValue"
        android:text="@string/minus"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/showAnswerButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/counterEditText2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/decrementButton2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="getTriviaQuestion"
        android:text="@string/next_question"
        app:layout_constraintBottom_toTopOf="@+id/saveScoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/saveScoreButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="saveScore"
        android:text="@string/save_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/showAnswerButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="showAnswer"
        android:text="@string/show_answer"
        app:layout_constraintBottom_toTopOf="@+id/nextQuestionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/counterEditText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/decrementButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#E30202"
        android:foregroundTint="#000000"
        android:onClick="changeCounterValue"
        android:text="@string/minus"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/showAnswerButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#00AA2A"
        android:foregroundTint="#000000"
        android:onClick="changeCounterValue"
        android:text="@string/plus"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/counterEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player1TextView"
        android:layout_width="99dp"
        android:layout_height="28dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/player_1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/incrementButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player2TextView"
        android:layout_width="99dp"
        android:layout_height="28dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/player_2"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/incrementButton2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>